# flet-page-manager

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tea.yaml
.github/workflows/: codestyle.yml  publish.yml  python-publish.yml
flet_page_manager/: __init__.py  exception.py  manager.py
flet_page_manager/pages/: __init__.py
page_manager/: __init__.py  exception.py  manager.py  state.py  utils.py
page_manager/pages/: base.py
