[project]
name = "flet-page-manager"
dynamic = ["version"]
description = "Flet Page Manager"
readme = "README.md"
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "flet>=0.9.0",
    "loguru>=0.7.2",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://pypi.org/project/flet-page-manager"
Repository = "https://github.com/zrr1999/flet-page-manager"

[tool.ruff]
select = ["UP"]
ignore = ["UP015"]
target-version = "py38"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
excludes = ["./**/.git"]
includes = [
    "page_manager",
]

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
