[project]
name = "flet-page-manager"
dynamic = ["version"]
description = "A simple window manager for Flet that allows you to easily build multi-window applications."
readme = "README.md"
authors = [
    {name = "Zhan Rongrui", email = "2742392377@qq.com"},
]
dependencies = [
    "flet>=0.21.2",
    "loguru>=0.7.2",
    "pydantic>=2.0.0"
]
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/zrr1999/flet-page-manager"
Repository = "https://github.com/zrr1999/flet-page-manager"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["F", "I", "B", "C4", "PGH", "W", "YTT"]
ignore = ["PGH003", "E501", "E741", "B008", "B904", "B023", "F841", "F821", "F841"]

[tool.ruff.lint.isort]
known-first-party = [
    "page_manager",
]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "I002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pdm.version]
source = "scm"

[tool.pdm.build]
includes = [
    "page_manager",
]

[build-system]
requires = ["pdm-backend", "pdm-pyfuture"]
build-backend = "pdm.backend"
